# Faber-Rudy-2000

./: Makefile.am  Makefile.in  README  in
src/: concent.c  data_out.c  eular.c  exptable.c  frd00.c  input_para.c  mem.c  pardiso_mat.c  solv_org.c  syspara.h  system.c  system.c.test  var_consts.c
